# react-jitter

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  index.d.ts  package-lock.json  package.json  runtime.js  swc_plugin_react_jitter.wasm
.changeset/: happy-moments-rhyme.md  moody-lands-shine.md  silver-terms-raise.md  test-changeset.md  upgrade-swc-core.md  young-readers-report.md
.github/workflows/: changeset-bot.yml  changesets.yml  ci.yml  release.yml
__tests__/: wasm.test.ts
__tests__/__snapshots__/: wasm.test.ts.snap
__tests__/fixtures/: 1_default.tsx  2_arrow_function.tsx  3_anonymous_function.tsx  4_non_react_function.tsx  5_jsx_function.tsx  6_create_element.tsx  7_use_prefix.tsx  8_jsx_outside_component.tsx  9_nested_function.tsx
app/: package-lock.json  package.json  vite.config.js
app/src/: App.test.jsx  runtime.test.jsx
plugin-swc/: Cargo.toml  swc_plugin_react_jitter.wasm
plugin-swc/src/: lib.rs  mock_detection.rs
runtime/: CHANGELOG.md  package.json  tsconfig.json  tsup.config.js
runtime/src/: index.ts  types.ts
runtime/src/utils/: compareChanges.test.ts  compareChanges.ts  getChanges.test.ts  getChanges.ts
src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
transform/tests/fixture/anonymous-function/: output.js
transform/tests/fixture/arrow-function/: output.js
transform/tests/fixture/default/: input.js  output.js
transform/tests_not_used_for_now/fixture/anonymous-function/: input.js  output.js
transform/tests_not_used_for_now/fixture/arrow-function/: input.js  output.js
transform/tests_not_used_for_now/fixture/default/: output.js
transformer/: Cargo.toml
transformer/src/: lib.rs
transformer/tests/: basic.rs
