[package]
name = "swc_plugin_react_jitter"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "47.0.2", features = ["ecma_plugin_transform", "ecma_utils", "ecma_ast", "ecma_visit", "common"] }
glob = "0.3.2"
sha2 = "0.10.9"
hex = "0.4.3"
