[package]
name = "swc_plugin_react_jitter"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "*", features = ["ecma_plugin_transform", "ecma_utils", "common_concurrent"] }
swc_ecma_ast = "*"
swc_ecma_parser = "*"
swc_ecma_visit = { version = "*", features = ["path"] }
swc_common = "*"
swc_ecma_utils = "*"
tracing = { version = "0.1.37", features = ["release_max_level_off"] }

[dev-dependencies]
swc_ecma_transforms_testing = "*"
react_jitter = { path = ".." }
testing = "*"
swc_ecma_transforms_base = "*"
