[package]
name = "swc_plugin_react_jitter"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
swc_core = { version = "27.0.6", features = ["ecma_plugin_transform", "ecma_utils", "common_concurrent"] }
swc_ecma_ast = "12.0.0"
swc_ecma_parser = "15.0.2"
swc_ecma_visit = { version = "12.0.0", features = ["path"] }
swc_common = "12.0.1"
swc_ecma_utils = "16.0.0"
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
glob = "0.3.1"

[dev-dependencies]
swc_ecma_transforms_testing = "19.0.0"
react_jitter = { path = ".." }
testing = "13.0.0"
swc_ecma_transforms_base = "16.0.0"
