[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { version = "0.82.0", features = ["ecma_plugin_transform","ecma_visit","ecma_parser","ecma_ast","common","ecma_codegen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
insta = { version = "1" }
